# publishers-gcloud-pubsub

./: README.rst  entry-points.txt  pyproject.toml  setup.cfg  setup.py
nagare/publishers/gcloud/: pubsub.py
src/nagare/publishers/gcloud/: pubsub.py
