[metadata]
name = nagare-publishers-gcloud-pubsub
author = Net-ng
author_email = alain.poirier@net-ng.com
description = Google cloud pub/sub publisher
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/publishers-gcloud-pubsub
    Tracker = https://github.com/nagareproject/publishers-gcloud-pubsub/issues

[options]
zip_safe = False
packages = find:
install_requires =
    nagare-services-gcloud-pubsub
    nagare-server

[options.entry_points]
nagare.publishers =
    gcloud.pubsub = nagare.publishers.gcloud.pubsub:Publisher

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
